# moduserve

./: CMakeLists.txt  ISSUES  README.md  TODO  protocol.txt
include/commands/: ServerCommandAPI.h
include/modules/: NetworkEngine.h  ServerModule.h  ServerModuleAPI.h
src/: CommandLineArgs.h  CommandManager.cpp  CommandManager.h  Connection.cpp  Connection.h  Logger.cpp  Logger.h  Role.h  User.h
src/client/: CMakeLists.txt  Client.cpp  Client.h  ClientConnection.cpp  ClientConnection.h  main.cpp
src/common/: CMakeLists.txt  Connection.cpp  Connection.h  Logger.cpp  Logger.h  Message.cpp  Message.h  OldLogger.cpp  PCH.cpp  PCH.h
src/server/: AdminPrompt.h  BroadcastManager.cpp  BroadcastManager.h  CMakeLists.txt  CommandManager.h  CommandRegistry.cpp  CommandRegistry.h  ConnectionManager.cpp  ConnectionManager.h  EventManager.h  Logger.cpp  Logger.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  MessageProcessor.cpp  MessageProcessor.h  ModuleManager.h  PlatformDetection.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  ServerObject.h  ServerSignal.h  ServerSignals.h  Signal.h  SignalManager.h  SubsystemManager.cpp  SubsystemManager.h  UUID.h  User.cpp  UserAuthenticator.cpp  UserAuthenticator.h  UserManager.cpp  UserManager.h  main.cpp
src/server/TEMP_optional_modules/: CMakeLists.txt
src/server/TEMP_optional_modules/bf_module/: BFModule.h
src/server/TEMP_optional_modules/database_module/: DatabaseModule.h
src/server/TEMP_optional_modules/user_module/: UserAuthenticationModule.cpp  UserAuthenticationModule.h  UserModule.cpp  UserModule.h
src/server/TEMP_optional_subsystems/database_subsystem/: CMakeLists.txt  DatabaseSubsystem.h
src/server/TEMP_optional_subsystems/user_subsystem/: UserAuthenticationSubsystem.h  UserManager.h  UserSubsystem.cpp  UserSubsystem.h
src/server/commands/: CMakeLists.txt  Command.h  CommandManager.cpp  CommandManager.h  CommandRegistry.cpp  CommandRegistry.h  HelpCommand.cpp  HelpCommand.h  ServerCommand.h  StopCommand.cpp  StopCommand.h  command_list.txt
src/server/commands/help_command/: CMakeLists.txt  HelpCommand.cpp  HelpCommand.h
src/server/commands/server/: CMakeLists.txt  HelpCommand.cpp  HelpCommand.h  NullCommand.cpp  NullCommand.h  StopCommand.cpp  StopCommand.h
src/server/commands/server/help_command/: HelpCommand.cpp
src/server/commands/server/stop_command/: CMakeLists.txt  StopCommand.cpp  StopCommand.h
src/server/commands/stop_command/: CMakeLists.txt  StopCommand.cpp  StopCommand.h
src/server/modules/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  Logger.cpp  Logger.h  MessageProcessor.cpp  MessageProcessor.h  NetworkEngine.cpp  NetworkEngine.h  NetworkEngineHelperFunctions.cpp  NetworkEngineHelperFunctions.hpp  ServerModule.h  ServerModuleManager.cpp  ServerModuleManager.h
src/server/modules/commandprocessor/: CMakeLists.txt  CommandManager.h  CommandProcessor.cpp  CommandProcessor.h
src/server/modules/connection_module/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  ConnectionModule.cpp  ConnectionModule.h  IOSystem.h  ServerConnection.cpp  ServerConnection.h
src/server/modules/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/server/modules/message_module/: CMakeLists.txt  MessageModule.cpp  MessageModule.h
src/server/modules/messageprocessor/: CMakeLists.txt  MessageProcessor.cpp  MessageProcessor.h
src/server/modules/networkengine/: CMakeLists.txt  Connection.h  ConnectionEngine.cpp  NetworkEngine.cpp  NetworkEngine.h  NetworkEngineHelperFunctions.hpp
src/server/modules/optional/: CMakeLists.txt
src/server/modules/optional/bf/: BFModule.cpp  CMakeLists.txt
src/server/modules/optional/databaseengine/: CMakeLists.txt
src/server/optional_modules/: BFModule.cpp  BFModule.h  CMakeLists.txt  FilesystemManager.cpp  FilesystemManager.h  SSLModule.cpp
src/server/optional_modules/bf/: BFModule.cpp
src/server/optional_modules/databaseengine/: DatabaseEngine.cpp
src/server/optional_modules/ssl/: SSLModule.h
src/server/optional_modules/usermanager/: CMakeLists.txt  UserModule.h
src/server/optional_subsystems/user_subsystem/: CMakeLists.txt  UserAuthenticationSubsystem.cpp
src/server/subservices/: BroadcastManager.cpp  CommandRegistry.cpp  CommandRegistry.h  ConnectionManager.cpp  ConnectionManager.h  MessageProcessor.cpp  MessageProcessor.h  UserAuthenticator.cpp  UserAuthenticator.h  UserManager.cpp  UserManager.h
src/server/subsystems/: BroadcastManager.cpp  BroadcastManager.h  CMakeLists.txt  CommandRegistry.cpp  ConnectionManager.cpp  MessageProcessor.cpp  Signal.h  Subsystem.h  SubsystemManager.cpp  SubsystemManager.h  UserAuthenticator.cpp  UserManager.cpp
src/server/subsystems/broadcast_subsystem/: BroadcastManager.cpp  BroadcastManager.h  BroadcastSubsystem.cpp  BroadcastSubsystem.h  CMakeLists.txt
src/server/subsystems/command_registry_subsystem/: CMakeLists.txt  CommandRegistry.cpp  CommandRegistry.h
src/server/subsystems/command_subsystem/: CMakeLists.txt  CommandSubsystem.cpp  CommandSubsystem.h
src/server/subsystems/connection_manager_subsystem/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h
src/server/subsystems/connection_subsystem/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  ConnectionSubsystem.cpp  ConnectionSubsystem.h  ServerConnection.cpp
src/server/subsystems/database_subsystem/: DatabaseSubsystem.cpp
src/server/subsystems/message_subsystem/: CMakeLists.txt  MessageProcessor.cpp  MessageProcessor.h  MessageSubsystem.cpp  MessageSubsystem.h
src/server/subsystems/user_subsystem/: CMakeLists.txt  User.cpp  User.h  UserAuthenticationSubsystem.cpp  UserAuthenticationSubsystem.h  UserAuthenticator.cpp  UserAuthenticator.h  UserManager.cpp  UserManager.h  UserSubsystem.cpp  UserSubsystem.h
